srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-docker-serv
  labels:
    app: python-docker
spec:
  type: NodePort
  selector:
    app: python-docker
  ports:
  - port: 80
    targetPort: 5000
